# DictOnly

./: LICENSE  README.md  README.org  README.rst  delete_by_regex.py  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
src/DictOnly/: __init__.py
src/module0/: __init__.py  util.py
tests/: test_main.py  test_util.py
