#
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#
# Minimum requirements for the build system to execute.
[build-system]
# PEP 508 specifications:
requires = ["setuptools", "wheel"]

# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[project]
name = "DictOnly"
version = "1.0.0"
description = "A python module"
readme = "README.rst"
authors = [
  {name = "nate", email = "author0@example.org"},
]
license = {file = "LICENSE"}
keywords = ["keyword1", "keyword2"]
dependencies = [
  "json5>=0.9.25"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests"
]